Add Dockerfile and scripts: Introduce a complete Dockerfile for RunPod integration, including environment setup, Nginx configuration, and SSH monitoring scripts. Update README with project disclaimer and modify Taskfile for new image naming convention.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,5 +9,5 @@ tasks:
     vars:
       VERSION: 0.0.1
     cmds:
-      - docker buildx build -t ghcr.io/r26d/ollama_cuda:{{.VERSION}} .
+      - docker buildx build -t ghcr.io/r26d/runpod_ollama_cuda:{{.VERSION}} .
 
