Enhance Dockerfile and add new files: Introduce multi-stage Dockerfile for Ollama installation, add LICENSE files for ollama_proxy and runpod, create TODO.md for project tasks, and update Nginx configuration for improved authentication handling.

--- a/files/proxy/nginx.conf
+++ b/files/proxy/nginx.conf
@@ -173,3 +173,62 @@ http {
     }
 
 }
+
+###
+
+# # Define the expected Authorization header
+# map $http_authorization $bearer_match {
+#     default 0;
+#     "Bearer ${OLLAMA_SECRET_API_KEY}" 1;
+# }
+
+# # Determine if authentication is required
+# map $request_method$bearer_match $auth_required {
+#     default 1;   # Require authentication by default
+#     ~^OPTIONS0 0; # Allow OPTIONS requests without authentication
+#     ~^.*1 0;     # Allow any method if bearer_match is 1
+# }
+
+# server {
+#     listen 80;
+#     server_name localhost;
+
+#     # Return 401 for unauthorized requests
+#     if ($auth_required) {
+#         return 401;
+#     }
+
+#     location / {
+#         # Handle preflight OPTIONS requests
+#         if ($request_method = OPTIONS) {
+#             # Add CORS headers for preflight request
+#             add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+#             add_header 'Access-Control-Allow-Credentials' 'true' always;
+#             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+#             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+#             add_header 'Access-Control-Max-Age' 1728000;
+#             return 204;
+#         }
+
+#         add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+#         add_header 'Access-Control-Allow_Credentials' 'true' always;
+#         add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+
+#         # Proxy the request to the local service
+#         proxy_pass http://host.docker.internal:11434;
+#         proxy_set_header Host $host;
+
+#         proxy_connect_timeout       600;
+#         proxy_send_timeout          600;
+#         proxy_read_timeout          600;
+#         send_timeout                600;
+
+#         proxy_hide_header Access-Control-Allow-Origin;
+#         proxy_hide_header Access-Control-Allow-Methods;
+#         proxy_hide_header Access-Control-Allow-Headers;
+#         proxy_hide_header Access-Control-Expose-Headers;
+#     }
+# }
+
+# # vim: set syntax=nginx ft=nginx
+
