--- a/files/proxy/nginx.conf
+++ b/files/proxy/nginx.conf
@@ -6,7 +6,7 @@ http {
     # Define the expected Authorization header
     map $http_authorization $bearer_match {
         default 0;
-        "Bearer ${OLLAMA_SECRET_API_KEY}" 1;
+        "Bearer OllamaNotALlama" 1;
     }
 
     # Determine if authentication is required
@@ -27,33 +27,33 @@ server {
 
     location / {
         # Handle preflight OPTIONS requests
-        if ($request_method = OPTIONS) {
-            # Add CORS headers for preflight request
-            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
-            add_header 'Access-Control-Max-Age' 1728000;
-            return 204;
-        }
-
+    if ($request_method = OPTIONS) {
         add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-        add_header 'Access-Control-Allow_Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+        add_header 'Access-Control-Max-Age' 1728000;
+        return 204;
+    }
 
-        # Proxy the request to the local service
-        proxy_pass http://localhost:11434;
-        proxy_set_header Host $host;
+    add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
 
-        proxy_connect_timeout       600;
-        proxy_send_timeout          600;
-        proxy_read_timeout          600;
-        send_timeout                600;
+    proxy_pass http://localhost:11434;
+    proxy_set_header Host $host;
+    proxy_set_header Authorization $http_authorization;
+    proxy_http_version 1.1;
 
-        proxy_hide_header Access-Control-Allow-Origin;
-        proxy_hide_header Access-Control-Allow-Methods;
-        proxy_hide_header Access-Control-Allow-Headers;
-        proxy_hide_header Access-Control-Expose-Headers;
+    proxy_connect_timeout 600;
+    proxy_send_timeout 600;
+    proxy_read_timeout 600;
+    send_timeout 600;
+
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Access-Control-Allow-Methods;
+    proxy_hide_header Access-Control-Allow-Headers;
+    proxy_hide_header Access-Control-Expose-Headers;
     }
  }
 }
